<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="300dp"
    android:layout_height="match_parent"
    android:background="@drawable/corners_dialog"
    android:orientation="vertical"
    android:paddingTop="10dp"
    tools:context=".MainActivity" >

    <TextView
        android:id="@+id/tv_item_enable"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:text="@string/channel_listview_item_enable"
        android:textColor="@color/black"
        android:textSize="@dimen/channel_list_title_size" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:background="@color/gray" />

    <TextView
        android:id="@+id/tv_item_delete"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:text="@string/channel_listview_item_delete"
        android:textColor="@color/black"
        android:textSize="@dimen/channel_list_title_size" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:background="@color/gray" />

    <TextView
        android:id="@+id/tv_item_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:text="@string/channel_listview_item_edit"
        android:textColor="@color/black"
        android:textSize="@dimen/channel_list_title_size" />

</LinearLayout>
